// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EthereumSig > should create propose envelope 1`] = `
{
  "data": {
    "authenticator": "0xc537d997dDc783E071F82CCBfAa0D768d310001b",
    "executionStrategy": {
      "addr": "0x6241b5c89350bb3c465179706cf26050ea32444f",
      "params": "0x00",
    },
    "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
    "space": "0xef8cd9081d7969c5cdcbb84dd8d577d2daefb649",
    "strategies": [
      {
        "address": "0xC1245C5DCa7885C73E32294140F1e5d30688c202",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "domain": {
      "chainId": 11155111,
      "name": "snapshot-x",
      "verifyingContract": "0xc537d997dDc783E071F82CCBfAa0D768d310001b",
      "version": "1.0.0",
    },
    "message": {
      "author": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
      "executionStrategy": {
        "addr": "0x6241b5c89350bb3c465179706cf26050ea32444f",
        "params": "0x00",
      },
      "metadataURI": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
      "salt": 0,
      "space": "0xef8cd9081d7969c5cdcbb84dd8d577d2daefb649",
      "userProposalValidationParams": "0x0000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000100000000000000000000000000000000000000000000000000000000000000200000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000000",
    },
    "signature": "0xe450f846743ae364e717e94bc88e842818be0ebc518e98fd27eaf28226e196ca28858b98a21b5a7c4a93ae215a97f64d2979e9ac228cbdddd7b8ed082aac6f5f1c",
    "types": {
      "Propose": [
        {
          "name": "space",
          "type": "address",
        },
        {
          "name": "author",
          "type": "address",
        },
        {
          "name": "metadataURI",
          "type": "string",
        },
        {
          "name": "executionStrategy",
          "type": "Strategy",
        },
        {
          "name": "userProposalValidationParams",
          "type": "bytes",
        },
        {
          "name": "salt",
          "type": "uint256",
        },
      ],
      "Strategy": [
        {
          "name": "addr",
          "type": "address",
        },
        {
          "name": "params",
          "type": "bytes",
        },
      ],
    },
  },
}
`;

exports[`EthereumSig > should create update proposal envelope 1`] = `
{
  "data": {
    "authenticator": "0xc537d997dDc783E071F82CCBfAa0D768d310001b",
    "executionStrategy": {
      "addr": "0x6241b5c89350bb3c465179706cf26050ea32444f",
      "params": "0x00",
    },
    "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
    "proposal": 1,
    "space": "0xef8cd9081d7969c5cdcbb84dd8d577d2daefb649",
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "domain": {
      "chainId": 11155111,
      "name": "snapshot-x",
      "verifyingContract": "0xc537d997dDc783E071F82CCBfAa0D768d310001b",
      "version": "1.0.0",
    },
    "message": {
      "author": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
      "executionStrategy": {
        "addr": "0x6241b5c89350bb3c465179706cf26050ea32444f",
        "params": "0x00",
      },
      "metadataURI": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
      "proposalId": 1,
      "salt": 0,
      "space": "0xef8cd9081d7969c5cdcbb84dd8d577d2daefb649",
    },
    "signature": "0x079dfdbec053c2a814f8b08d3e8f6c171e4a4bd934466e0fd39e6003feca7721530f1289f7e4647958c1ff7a746cf8834aee7e4c49c63399bb97b0ab6d4dbbd91c",
    "types": {
      "Strategy": [
        {
          "name": "addr",
          "type": "address",
        },
        {
          "name": "params",
          "type": "bytes",
        },
      ],
      "updateProposal": [
        {
          "name": "space",
          "type": "address",
        },
        {
          "name": "author",
          "type": "address",
        },
        {
          "name": "proposalId",
          "type": "uint256",
        },
        {
          "name": "executionStrategy",
          "type": "Strategy",
        },
        {
          "name": "metadataURI",
          "type": "string",
        },
        {
          "name": "salt",
          "type": "uint256",
        },
      ],
    },
  },
}
`;

exports[`EthereumSig > should create vote envelope 1`] = `
{
  "data": {
    "authenticator": "0xc537d997dDc783E071F82CCBfAa0D768d310001b",
    "choice": 1,
    "metadataUri": "",
    "proposal": 1,
    "space": "0xef8cd9081d7969c5cdcbb84dd8d577d2daefb649",
    "strategies": [
      {
        "address": "0xC1245C5DCa7885C73E32294140F1e5d30688c202",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "domain": {
      "chainId": 11155111,
      "name": "snapshot-x",
      "verifyingContract": "0xc537d997dDc783E071F82CCBfAa0D768d310001b",
      "version": "1.0.0",
    },
    "message": {
      "choice": 1,
      "proposalId": 1,
      "space": "0xef8cd9081d7969c5cdcbb84dd8d577d2daefb649",
      "userVotingStrategies": [
        {
          "index": 0,
          "params": "0x00",
        },
      ],
      "voteMetadataURI": "",
      "voter": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    },
    "signature": "0x3f330a1ebcf2ca57e44ee18270ee6e7a2d4eb2b09cfb15bb19f3d4fe53feb72e0b9d88da492b2539edaba2ed5f6f7583fca9497f7228aad17923aff78261096a1b",
    "types": {
      "IndexedStrategy": [
        {
          "name": "index",
          "type": "uint8",
        },
        {
          "name": "params",
          "type": "bytes",
        },
      ],
      "Vote": [
        {
          "name": "space",
          "type": "address",
        },
        {
          "name": "voter",
          "type": "address",
        },
        {
          "name": "proposalId",
          "type": "uint256",
        },
        {
          "name": "choice",
          "type": "uint8",
        },
        {
          "name": "userVotingStrategies",
          "type": "IndexedStrategy[]",
        },
        {
          "name": "voteMetadataURI",
          "type": "string",
        },
      ],
    },
  },
}
`;
